feat: 당첨 번호와 보너스 번호 입력 검증 로직 추가